Updated to current site
synced to live version on AWS

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </div>
 </div>
 <div class="mt-12 text-center">
-<a class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105" href="https://projectglitch.xyz" target="_blank">
+<a class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105" href="https://youtube.com/playlist?list=PLWmtTg-WFLv7dELgJvRe7OSNlF-tyAA7U&si=YfpIY44sAo8YjZ8e" target="_blank">
                         View All Project Glitch Sessions
                     </a>
 </div>
