--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <div class="flex flex-col items-center mb-6">
 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-2">PGP* for Crypto</h1>
 <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">
-                        Cultivating Pretty Good Policy for the Cryptocurrency Industry.
-                    </p>
+                    Cultivating Pretty Good Policy for the Cryptocurrency Industry
+                </p>
 <p class="text-base text-gray-400 mt-2">
                         An Initiative of the Institute for Economic Freedom
                     </p>
