--- a/index.html
+++ b/index.html
@@ -1,110 +1,90 @@
 <!DOCTYPE html>
-
 <html class="scroll-smooth" lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link href="favicon.ico" rel="icon" type="image/x-icon"/>
-<title>PGP* for Crypto</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
-<script>
-        // Custom Tailwind theme configuration
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                    colors: {
-                        'brand-dark': '#3a204a', /* Muted Deep Plum for main dark elements like header/footer */
-                        'brand-light': '#f8f5fa', /* Very light, subtle lavender-gray for general background */
-                        'brand-purple': '#6a4a7a', /* A sophisticated mid-purple for accents and buttons */
-                        'brand-accent': '#8e719e', /* Lighter, more muted purple accent for hover states */
-                        'text-dark': '#2a1a3a', /* Very dark, almost black-purple for main text/headings */
-                        'text-light': '#90809a', /* Muted light gray-purple for secondary text */
-                    }
-                }
-            }
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+  <title>PGP* for Crypto</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'sans-serif'] },
+          colors: {
+            'brand-dark': '#3a204a',
+            'brand-light': '#f8f5fa',
+            'brand-purple': '#6a4a7a',
+            'brand-accent': '#8e719e',
+            'text-dark': '#2a1a3a',
+            'text-light': '#90809a'
+          }
         }
-    </script>
-<style>
-        /* Additional custom styles */
-        .card-gradient {
-            background-image: linear-gradient(to top right, #ffffff, #f0eff1); /* Keep cards very light for contrast */
-        }
-        .hero-bg {
-            background-color: #3a204a; /* Muted Deep Plum for hero section */
-            background-image: 
-                radial-gradient(circle at 15% 50%, rgba(142, 113, 158, 0.1), transparent 30%), /* Muted purple accent in hero */
-                radial-gradient(circle at 85% 30%, rgba(142, 113, 158, 0.08), transparent 25%); /* Muted purple accent in hero */
-        }
-    </style>
+      }
+    }
+  </script>
+  <style>
+    .card-gradient { background-image: linear-gradient(to top right, #ffffff, #f0eff1); }
+    .hero-bg { background-color: #3a204a; background-image: radial-gradient(circle at 15% 50%, rgba(142,113,158,0.1), transparent 30%), radial-gradient(circle at 85% 30%, rgba(142,113,158,0.08), transparent 25%); }
+  </style>
 </head>
 <body class="bg-brand-light text-text-dark antialiased">
-<header class="bg-brand-dark/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-50 transition-all duration-300" id="header">
-<div class="container mx-auto px-6 py-4 flex justify-between items-center">
-<a class="text-xl font-bold text-white flex items-center" href="#">
-<img alt="PGP Logo" class="h-8 w-auto mr-2" src="pgp_profile_image.png"/> PGP*
-            </a>
-<nav class="hidden md:flex space-x-8">
-<a class="text-gray-300 hover:text-white transition" href="#overview">Overview</a>
-<a class="text-gray-300 hover:text-white transition" href="#videos">Videos</a>
-<a class="text-gray-300 hover:text-white transition" href="#project-glitch">Project Glitch</a>
-<a class="text-gray-300 hover:text-white transition" href="#summaries">Summaries</a>
-<a class="text-gray-300 hover:text-white transition" href="https://www.instituteforeconomicfreedom.org" target="_blank">IEF Home</a>
-</nav>
-<button class="md:hidden text-white" id="mobile-menu-button">
-<svg class="h-6 w-6" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-<path d="M4 6h16M4 12h16m-7 6h7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-</svg>
-</button>
-</div>
-<div class="hidden md:hidden" id="mobile-menu">
-<a class="block py-2 px-6 text-gray-300 hover:bg-gray-700" href="#overview">Overview</a>
-<a class="block py-2 px-6 text-gray-300 hover:bg-gray-700" href="#videos">Videos</a>
-<a class="block py-2 px-6 text-gray-300 hover:bg-gray-700" href="#project-glitch">Project Glitch</a>
-<a class="block py-2 px-6 text-gray-300 hover:bg-gray-700" href="#summaries">Summaries</a>
-<a class="block py-2 px-6 text-gray-300 hover:bg-gray-700" href="https://www.instituteforeconomicfreedom.org" target="_blank">IEF Home</a>
-</div>
-</header>
-<main>
-<section class="hero-bg pt-32 pb-20 text-white text-center">
-<div class="container mx-auto px-6">
-<div class="flex flex-col items-center mb-6">
-<h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-2">PGP* for Crypto</h1>
-<p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">
-                Cultivating Pretty Good Policy for the Cryptocurrency Industry.
-            </p>
-<p class="text-base text-gray-400 mt-2">
-                        An Initiative of the Institute for Economic Freedom
-                    </p>
-</div>
-<a class="mt-8 inline-block bg-brand-purple hover:bg-brand-accent text-white font-bold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105" href="#overview">
-                    Learn More
-                </a>
-</div>
-</section>
-<section class="py-20 bg-white" id="overview">
-<div class="container mx-auto px-6">
-<div class="text-center mb-12">
-<h2 class="text-3xl md:text-4xl font-bold text-text-dark">About PGP* for Crypto</h2>
-<p class="text-lg text-text-light mt-2 max-w-2xl mx-auto">PGP* (Pretty Good Policy) for Crypto is a monthly gathering designed to foster informed discussion and collaboration on critical cryptocurrency policy issues.</p>
-</div>
-<div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-lg">
-<p class="text-gray-700 mb-6">
-                        The series brings together industry leaders, government officials, and policy experts to delve into the complex landscape of digital asset regulation and innovation. Our goal is to cultivate "Pretty Good Policy" – practical, forward-thinking solutions that balance technological advancement with necessary safeguards.
-                    </p>
-<p class="text-gray-700">
-                        Each meeting features insightful briefings and interactive roundtable discussions, providing a unique platform for diverse perspectives to converge and shape the future of cryptocurrency policy.
-                    </p>
-<div class="mt-8 text-center">
-<a class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-2 px-6 rounded-lg transition" href="https://lu.ma/pgpforcrypto" target="_blank">Register for Upcoming Meetings</a>
-</div>
-</div>
-</div>
+  <header id="header" class="bg-brand-dark/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-50 transition-all duration-300 py-4">
+    <div class="container mx-auto px-6 flex justify-between items-center">
+      <a href="#" class="text-xl font-bold text-white flex items-center">
+        <img src="pgp_profile_image.png" alt="PGP Logo" class="h-8 w-auto mr-2"/>PGP*
+      </a>
+      <nav class="hidden md:flex space-x-8">
+        <a href="#overview" class="text-gray-300 hover:text-white transition">Overview</a>
+        
+        <a href="#videos" class="text-gray-300 hover:text-white transition">Videos</a>
+        <a href="#project-glitch" class="text-gray-300 hover:text-white transition">Project Glitch</a>
+        <a href="#summaries" class="text-gray-300 hover:text-white transition">Summaries</a>
+<a href="#background" class="text-gray-300 hover:text-white transition">Background</a>
+		  <a href="https://www.instituteforeconomicfreedom.org" target="_blank" class="text-gray-300 hover:text-white transition">IEF Home</a>
+      </nav>
+      <button id="mobile-menu-button" class="md:hidden text-white">
+        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"/>
+        </svg>
+      </button>
+    </div>
+    <div id="mobile-menu" class="hidden md:hidden bg-brand-dark/90">
+      <a href="#overview" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">Overview</a>
+      <a href="#background" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">Background</a>
+      <a href="#videos" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">Videos</a>
+      <a href="#project-glitch" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">Project Glitch</a>
+      <a href="#summaries" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">Summaries</a>
+      <a href="https://www.instituteforeconomicfreedom.org" target="_blank" class="block py-2 px-6 text-gray-300 hover:bg-gray-700">IEF Home</a>
+    </div>
+  </header>
+  <main>
+    <section class="hero-bg pt-32 pb-24 text-white text-center">
+      <div class="container mx-auto px-6">
+        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-2">PGP* for Crypto</h1>
+        <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">Cultivating Pretty Good Policy for the Cryptocurrency Industry.</p>
+        <p class="text-base text-gray-400 mt-2">An Initiative of the Institute for Economic Freedom</p>
+        <a href="#overview" class="mt-8 inline-block bg-brand-purple hover:bg-brand-accent text-white font-bold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105">Learn More</a>
+      </div>
+    </section>
+
+    <section id="overview" class="py-20 bg-white">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl md:text-4xl font-bold text-text-dark text-center mb-4">About PGP* for Crypto</h2>
+        <p class="text-lg text-text-light text-center mb-12">PGP* (Pretty Good Policy) for Crypto is a monthly gathering designed to foster informed discussion and collaboration on critical cryptocurrency policy issues.</p>
+        <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-2xl shadow-lg card-gradient">
+          <p class="text-gray-700 mb-6">The series brings together industry leaders, government officials, and policy experts to delve into the complex landscape of digital asset regulation and innovation, with a special emphasis on privacy-preserving technologie&nbsp; as key tools in addressing financial policy challenges such as AML/KYC. Our goal is to cultivate "Pretty Good Policy" – practical, forward-thinking solutions that balance technological advancement with necessary safeguards.</p>
+          <p class="text-gray-700">Each meeting features insightful briefings and interactive roundtable discussions, providing a unique platform for diverse perspectives to converge and shape the future of cryptocurrency policy.&nbsp; &nbsp; &nbsp;&nbsp;</p>
+          <div class="mt-8 text-center"><a href="https://lu.ma/pgpforcrypto" target="_blank" class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-2 px-6 rounded-lg transition">Register for Upcoming Meetings</a></div>
+        </div>
+      </div>
+    </section>
+
+
+
 </section>
 <section class="py-20 bg-brand-light" id="videos"> <div class="container mx-auto px-6">
 <div class="text-center mb-12">
@@ -201,32 +181,38 @@
 </div>
 </div>
 </section>
-</main>
-<footer class="bg-brand-dark text-gray-400 py-8">
-<div class="container mx-auto px-6 text-center">
-<p>© 2025 PGP* for Crypto · All Rights Reserved</p>
-<p class="text-sm mt-2">An Initiative of the Institute for Economic Freedom</p>
-</div>
-</footer>
-<script>
-        // Mobile Menu Toggle
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
+	
+    <section id="background" class="py-20 bg-white">
+      <div class="container mx-auto px-6 max-w-3xl">
+        <div class="bg-white p-10 rounded-2xl shadow-lg border-l-8 border-brand-purple">
+          <h2 class="text-3xl font-bold text-text-dark mb-4">The Origin of “PGP*”</h2>
+          <p class="mb-4">The name <strong>PGP*</strong> (Pretty Good Policy) for Crypto series, noting that the “PGP” reference is in homage to <a href="https://en.wikipedia.org/wiki/Pretty_Good_Privacy" target="_blank" class="text-brand-purple underline hover:text-brand-accent">Pretty Good Privacy</a> encryption and is carried over from Electric Coin Co.’s longstanding Pretty Good Pancakes breakfasts held in conjunction with industry events. As the first freely distributed, high quality public-key cryptography system, PGP (an acronym for <strong>P</strong>retty <strong>G</strong>ood <strong>P</strong>rivacy) was a widely used tool among cypherpunks for privacy protection and has had a major influence on the development of cryptocurrencies. PGP is still used today, especially in the cyber threat intelligence community.</p>
+          <p class="mb-4">Paul Brigner spearheaded the PGP* meetings in DC beginning in early 2022 and has continued to serve as the host and lead organizer of the series. PGP* meetings are held at the University of Southern California Capital Campus in partnership with the USC Marshall VanEck Digital Assets Initiative (<a href="https://www.marshall.usc.edu/institutes-and-centers/vaneck-digital-assets-initiative" target="_blank" class="text-brand-purple underline hover:text-brand-accent">USC VanEck Initiative</a>).</p>
+          <p>Beginning in 2025, a team of journalists from Project Glitch (<a href="https://projectglitch.xyz" target="_blank" class="text-brand-purple underline hover:text-brand-accent">Project Glitch</a>) joined PGP* to provide a highly curated, deep-dive session at each meeting, which can be seen on YouTube at <a href="https://www.youtube.com/playlist?list=PLWmtTg-WFLv7dELgJvRe7OSNlF-tyAA7U" target="_blank" class="text-brand-purple underline hover:text-brand-accent">this playlist</a>.</p>
+        </div>
+      </div>
+    </section>	
 
-        // Sticky Header Effect
-        const header = document.getElementById('header');
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 50) {
-                header.classList.add('py-2');
-                header.classList.remove('py-4');
-            } else {
-                header.classList.add('py-4');
-                header.classList.remove('py-2');
-            }
-        });
-    </script>
+  </main>
+
+  <footer class="bg-brand-dark text-gray-400 py-8">
+    <div class="container mx-auto px-6 text-center">
+      <p>© 2025 PGP* for Crypto · All Rights Reserved</p>
+      <p class="text-sm mt-2">An Initiative of the Institute for Economic Freedom</p>
+    </div>
+  </footer>
+  <script>
+    const mobileMenuButton = document.getElementById('mobile-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+    mobileMenuButton.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
+    const header = document.getElementById('header');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 50) {
+        header.classList.replace('py-4','py-2');
+      } else {
+        header.classList.replace('py-2','py-4');
+      }
+    });
+  </script>
 </body>
 </html>
