added member-only community to the nav bar

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <a href="#videos" class="text-gray-300 hover:text-white transition">Videos</a>
         <a href="#project-glitch" class="text-gray-300 hover:text-white transition">Project Glitch</a>
         <a href="#summaries" class="text-gray-300 hover:text-white transition">Summaries</a>
-<a href="#background" class="text-gray-300 hover:text-white transition">Background</a>
-		  <a href="https://www.instituteforeconomicfreedom.org" target="_blank" class="text-gray-300 hover:text-white transition">IEF Home</a>
+		<a href="#background" class="text-gray-300 hover:text-white transition">Background</a>
+		<a href="https://community.pgpforcrypto.org" class="text-gray-300 hover:text-white transition">Member Community</a>
+		<a href="https://www.instituteforeconomicfreedom.org" target="_blank" class="text-gray-300 hover:text-white transition">IEF Home</a>
       </nav>
       <button id="mobile-menu-button" class="md:hidden text-white">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
