refresh; added Sept. meeting

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
         <h2 class="text-3xl md:text-4xl font-bold text-text-dark text-center mb-4">About PGP* for Crypto</h2>
         <p class="text-lg text-text-light text-center mb-12">PGP* (Pretty Good Policy) for Crypto is a monthly gathering designed to foster informed discussion and collaboration on critical cryptocurrency policy issues.</p>
         <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-2xl shadow-lg card-gradient">
-          <p class="text-gray-700 mb-6">The series brings together industry leaders, government officials, and policy experts to delve into the complex landscape of digital asset regulation and innovation, with a special emphasis on privacy-preserving technologies as key tools in addressing financial policy challenges such as AML/KYC. Our goal is to cultivate "Pretty Good Policy" – practical, forward-thinking solutions that balance technological advancement with necessary safeguards.</p>
-          <p class="text-gray-700">Each meeting features insightful briefings and interactive roundtable discussions, providing a unique platform for diverse perspectives to converge and shape the future of cryptocurrency policy.&nbsp; &nbsp; &nbsp;&nbsp;</p>
-          <div class="mt-8 text-center"><a href="https://lu.ma/pgpforcrypto" target="_blank" class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-2 px-6 rounded-lg transition">Register for Upcoming Meetings</a></div>
+          <p class="text-gray-700 mb-6">The series brings together policy experts to work through key issues in digital‑asset regulation and innovation. We emphasize privacy‑preserving technologies and how they challenge current anti‑money‑laundering (AML) and know‑your‑customer (KYC) frameworks, highlighting how they are often incompatible with current technology and leveraging the collective wisdom of the PGP* community to devise policies to enable a more efficient and inclusive crypto‑based financial system.</p>
+          <p class="text-gray-700  mb-6">With support from Electric Coin Co., the developers of Zcash, Paul Brigner launched the PGP* meetings in early 2022 and continues to serve as host and lead organizer. In 2024, the Project Glitch team joined the series to provide a highly curated deep‑dive session at each meeting.</p>
+          <p class="text-gray-700">Each session begins with a networking breakfast with Pretty Good Pancakes and then includes a series of concise briefings (lightning talks) and a deep dive into a timely topic selected by Project Glitch—designed to encourage informed discussion and collaboration as we push for Pretty Good Policy for Crypto in the U.S.</p>
+		  <div class="mt-8 text-center"><a href="https://lu.ma/pgpforcrypto" target="_blank" class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-2 px-6 rounded-lg transition">Register for Upcoming Meetings</a></div>
         </div>
       </div>
     </section>
@@ -134,14 +135,24 @@
 <h2 class="text-3xl md:text-4xl font-bold text-text-dark">Project Glitch Curated Sessions</h2>
 <p class="text-lg text-text-light mt-2 max-w-2xl mx-auto">Selected deep dives into critical technical and policy issues from <a class="underline text-brand-purple hover:text-brand-accent" href="https://projectglitch.xyz" target="_blank">Project Glitch</a> at PGP* meetings.</p>
 </div>
-<div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+<div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+<div class="relative w-full aspect-video">
+<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-in; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="absolute top-0 left-0 w-full h-full" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" src="https://youtube.com/embed/cAMgGCCR3Os" title="YouTube video player"></iframe>
+</div>
+<div class="p-6">
+<h3 class="text-xl font-bold text-text-dark mb-2">What decentralization cab do for AI</h3>
+<p class="text-gray-600 text-sm">Featuring Art Abal, Managing Director of the Vana Foundation, and Jay Stanley, Senior Policy Analyst at the ACLU</p>
+</div>
+</div>
+	
+	<div class="bg-white rounded-xl shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
 <div class="relative w-full aspect-video">
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-in; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="absolute top-0 left-0 w-full h-full" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hfhLqnXL3ak" title="YouTube video player"></iframe>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold text-text-dark mb-2">Project Glitch: Tornado Cash and Samourai Wallet Updates</h3>
-<p class="text-gray-600 text-sm">Featuring Amanda Tuminelli (DeFi Education Fund) and Peter Van Valkenburgh (Coin Center)</p>
+<h3 class="text-xl font-bold text-text-dark mb-2">Tornado Cash and Samourai Wallet Updates</h3>
+<p class="text-gray-600 text-sm">Featuring Amanda Tuminell, DeFi Education Fund, and Peter Van Valkenburg, Coin Center</p>
 </div>
 </div>
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
@@ -149,7 +160,7 @@
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-in; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="absolute top-0 left-0 w-full h-full" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/euqOljuV43c" title="YouTube video player"></iframe>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold text-text-dark mb-2">Project Glitch: Samczsun on Crypto Security &amp; SEAL's Mission</h3>
+<h3 class="text-xl font-bold text-text-dark mb-2">Samczsun on Crypto Security &amp; SEAL's Mission</h3>
 <p class="text-gray-600 text-sm">From PGP* for Crypto Briefings &amp; Roundtable</p>
 </div>
 </div>
@@ -158,7 +169,7 @@
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-in; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="absolute top-0 left-0 w-full h-full" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/9abU3aooAPc" title="YouTube video player"></iframe>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold text-text-dark mb-2">Project Glitch: Confidential Stablecoins</h3>
+<h3 class="text-xl font-bold text-text-dark mb-2">Confidential Stablecoins</h3>
 <p class="text-gray-600 text-sm">Featuring Leslie Chavkin (Paxos), Andrew Omietanski (Aztec), and Sina Kian (Aleo)</p>
 </div>
 </div>
@@ -176,7 +187,7 @@
 <h2 class="text-3xl md:text-4xl font-bold text-text-dark">Meeting Summaries</h2>
 <p class="text-lg text-text-light mt-2 max-w-2xl mx-auto">Browse recent meeting summaries from PGP* for Crypto.</p>
 </div>
-<div class="flex justify-center"><div class="text-center space-y-4"><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-june-17-2025-paul-brigner-cefme" target="_blank">PGP* Briefings – June 17, 2025</a><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-may-21-2025-paul-brigner-lxblc" target="_blank">PGP* Briefings – May 21, 2025</a><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-april-23-2025-paul-brigner-yp5le" target="_blank">PGP* Briefings – April 23, 2025</a></div></div>
+<div class="flex justify-center"><div class="text-center space-y-4"><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-september-17-2025-paul-brigner-yjjee" target="_blank">PGP* Briefings – September 17, 2025</a><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-june-17-2025-paul-brigner-cefme" target="_blank">PGP* Briefings – June 17, 2025</a><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-may-21-2025-paul-brigner-lxblc" target="_blank">PGP* Briefings – May 21, 2025</a><a class="text-brand-purple hover:text-brand-accent text-lg font-medium block" href="https://www.linkedin.com/pulse/pgp-briefings-april-23-2025-paul-brigner-yp5le" target="_blank">PGP* Briefings – April 23, 2025</a></div></div>
 <div class="mt-12 text-center">
 <a class="inline-block bg-brand-purple hover:bg-brand-accent text-white font-semibold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105" href="https://www.linkedin.com/in/paulbrigner/recent-activity/posts/" target="_blank">View All Summaries on LinkedIn</a>
 </div>
@@ -188,8 +199,6 @@
         <div class="bg-white p-10 rounded-2xl shadow-lg border-l-8 border-brand-purple">
           <h2 class="text-3xl font-bold text-text-dark mb-4">The Origin of “PGP*”</h2>
           <p class="mb-4">The “<strong>PGP</strong>” reference is in homage to <a href="https://en.wikipedia.org/wiki/Pretty_Good_Privacy" target="_blank" class="text-brand-purple underline hover:text-brand-accent">Pretty Good Privacy</a> encryption and is carried over from Electric Coin Co.’s longstanding Pretty Good Pancakes breakfasts held in conjunction with industry events. As the first freely distributed, high quality public-key cryptography system, PGP (an acronym for <strong>P</strong>retty <strong>G</strong>ood <strong>P</strong>rivacy) was a widely used tool among cypherpunks for privacy protection and has had a major influence on the development of cryptocurrencies. PGP is still used today, especially in the cyber threat intelligence community.</p>
-          <p class="mb-4"><a href="https://www.linkedin.com/in/paulbrigner">Paul Brigner</a> spearheaded the PGP* meetings in DC beginning in early 2022 and has continued to serve as the host and lead organizer of the series. PGP* meetings are held at the University of Southern California Capital Campus in partnership with the USC Marshall VanEck Digital Assets Initiative (<a href="https://www.marshall.usc.edu/institutes-and-centers/vaneck-digital-assets-initiative" target="_blank" class="text-brand-purple underline hover:text-brand-accent">USC VanEck Initiative</a>).</p>
-          <p>Beginning in 2025, a team of journalists from Project Glitch (<a href="https://projectglitch.xyz" target="_blank" class="text-brand-purple underline hover:text-brand-accent">Project Glitch</a>) joined PGP* to provide a highly curated, deep-dive session at each meeting, which can be seen on YouTube at <a href="https://www.youtube.com/playlist?list=PLWmtTg-WFLv7dELgJvRe7OSNlF-tyAA7U" target="_blank" class="text-brand-purple underline hover:text-brand-accent">this playlist</a>.</p>
         </div>
       </div>
     </section>	
