--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-in; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="absolute top-0 left-0 w-full h-full" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" src="https://youtube.com/embed/cAMgGCCR3Os" title="YouTube video player"></iframe>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold text-text-dark mb-2">What decentralization cab do for AI</h3>
+<h3 class="text-xl font-bold text-text-dark mb-2">What decentralization can do for AI</h3>
 <p class="text-gray-600 text-sm">Featuring Art Abal, Managing Director of the Vana Foundation, and Jay Stanley, Senior Policy Analyst at the ACLU</p>
 </div>
 </div>
