--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section class="hero-bg pt-32 pb-24 text-white text-center">
       <div class="container mx-auto px-6">
         <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-2">PGP* for Crypto</h1>
-        <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">Cultivating Pretty Good Policy for the Cryptocurrency Industry.</p>
+        <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">Cultivating Pretty Good Policy for the Cryptocurrency Industry</p>
         <p class="text-base text-gray-400 mt-2">An Initiative of the Institute for Economic Freedom</p>
         <a href="#overview" class="mt-8 inline-block bg-brand-purple hover:bg-brand-accent text-white font-bold py-3 px-8 rounded-full transition-transform duration-300 hover:scale-105">Learn More</a>
       </div>
