--- a/index.html
+++ b/index.html
@@ -66,33 +66,29 @@
         <img src="pgp_profile_image.png" alt="PGP* for Crypto" class="mr-3 h-9 w-9 rounded-full border border-white/30 object-cover"/>
         <span>PGP*</span>
       </a>
-      <nav class="hidden items-center space-x-8 text-sm font-medium uppercase tracking-[0.08em] text-brand-cloud md:flex">
+      <nav class="hidden items-center space-x-3 text-xs font-semibold uppercase tracking-[0.03em] text-brand-cloud lg:flex">
         <a href="#mission" class="hover:text-white transition">Mission</a>
         <a href="#focus" class="hover:text-white transition">Focus Areas</a>
         <a href="#videos" class="hover:text-white transition">Videos</a>
-        <a href="#project-glitch" class="hover:text-white transition">Project Glitch</a>
-        <a href="#summaries" class="hover:text-white transition">Summaries</a>
+        <a href="#project-glitch" class="hover:text-white transition">Deep Dives</a>
+        <a href="#summaries" class="hover:text-white transition">Recent Meetings</a>
         <a href="#venue" class="hover:text-white transition">Venue</a>
-        <a href="#government-notice" class="hover:text-white transition">Notice</a>
-        <a href="#background" class="hover:text-white transition">Background</a>
         <a href="https://www.instituteforeconomicfreedom.org" target="_blank" rel="noopener noreferrer" class="hover:text-white transition">IEF Home</a>
         <a href="https://community.pgpforcrypto.org" class="rounded-full bg-white/10 px-3 py-1 font-semibold text-white transition hover:bg-white/20">Member Community</a>
       </nav>
-      <button id="mobile-menu-button" class="md:hidden text-white" aria-label="Toggle navigation">
+      <button id="mobile-menu-button" class="text-white lg:hidden" aria-label="Toggle navigation">
         <svg class="h-7 w-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m0 6H4"/>
         </svg>
       </button>
     </div>
-    <div id="mobile-menu" class="md:hidden hidden space-y-1 bg-brand-navy/95 px-6 pb-6 pt-3 text-sm font-medium uppercase tracking-[0.12em] text-brand-cloud">
+    <div id="mobile-menu" class="hidden space-y-1 bg-brand-navy/95 px-6 pb-6 pt-3 text-sm font-medium uppercase tracking-[0.12em] text-brand-cloud lg:hidden">
       <a href="#mission" class="block rounded-lg px-3 py-2 hover:bg-white/10">Mission</a>
       <a href="#focus" class="block rounded-lg px-3 py-2 hover:bg-white/10">Focus Areas</a>
       <a href="#videos" class="block rounded-lg px-3 py-2 hover:bg-white/10">Videos</a>
-      <a href="#project-glitch" class="block rounded-lg px-3 py-2 hover:bg-white/10">Project Glitch</a>
-      <a href="#summaries" class="block rounded-lg px-3 py-2 hover:bg-white/10">Summaries</a>
+      <a href="#project-glitch" class="block rounded-lg px-3 py-2 hover:bg-white/10">Deep Dives</a>
+      <a href="#summaries" class="block rounded-lg px-3 py-2 hover:bg-white/10">Recent Meetings</a>
       <a href="#venue" class="block rounded-lg px-3 py-2 hover:bg-white/10">Venue</a>
-      <a href="#government-notice" class="block rounded-lg px-3 py-2 hover:bg-white/10">Notice</a>
-      <a href="#background" class="block rounded-lg px-3 py-2 hover:bg-white/10">Background</a>
       <a href="https://community.pgpforcrypto.org" class="mt-2 block rounded-full bg-white/10 px-3 py-2 text-center font-semibold text-white hover:bg-white/20">Member Community</a>
       <a href="https://www.instituteforeconomicfreedom.org" target="_blank" rel="noopener noreferrer" class="block rounded-lg px-3 py-2 hover:bg-white/10">IEF Home</a>
     </div>
