--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       <div class="mx-auto flex max-w-6xl flex-col gap-16 px-6 lg:flex-row lg:items-center">
         <div class="max-w-xl">
           <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">Monthly Briefings for Crypto Policy Leaders</p>
-          <h1 class="mt-4 text-4xl font-extrabold leading-tight md:text-6xl">PGP* — Pretty Good Policy for Crypto</h1>
+          <h1 class="mt-4 text-[2.25rem] font-extrabold leading-tight md:text-[3.5rem]">PGP* <br>
+          (Pretty Good Policy) for Crypto</h1>
           <p class="mt-6 text-lg text-brand-cloud">An initiative of the Institute for Economic Freedom, convening policymakers, privacy technologists, and advocates to advance balanced cryptocurrency frameworks.</p>
           <div class="mt-8 flex flex-col gap-3 sm:flex-row">
             <a href="#mission" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-sm font-semibold uppercase tracking-[0.2em] text-brand-navy transition hover:bg-brand-cloud">Explore the Mission</a>
