--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
     <section class="hero-sheen overflow-hidden pt-28 pb-32 text-white">
       <div class="mx-auto flex max-w-6xl flex-col gap-16 px-6 lg:flex-row lg:items-center">
         <div class="max-w-xl">
-          <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">Monthly Briefings for Crypto Policy Leaders</p>
-          <h1 class="mt-4 font-extrabold leading-tight">
-            <span class="hero-title-main"><span class="hero-letter">P</span><span class="hero-letter">G</span><span class="hero-letter">P</span><span class="hero-title-star">*</span></span>
-            <span class="hero-title-sub">(Pretty Good Policy) for Crypto</span>
+          <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">Monthly Networking &amp; Briefings</p>
+          <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">for Crypto Policy Leaders</p>
+<h1 class="mt-4 font-extrabold leading-tight">
+          <span class="hero-title-main"><span class="hero-letter">P</span><span class="hero-letter">G</span><span class="hero-letter">P</span><span class="hero-title-star">*</span></span>
+          <span class="hero-title-sub">(Pretty Good Policy) for Crypto</span>
           </h1>
           <p class="mt-6 text-lg text-brand-cloud">An initiative of the Institute for Economic Freedom, convening policymakers, privacy technologists, and advocates to advance balanced cryptocurrency frameworks.</p>
           <div class="mt-8 flex flex-col gap-3 sm:flex-row">
