--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <span class="hero-title-main"><span class="hero-letter">P</span><span class="hero-letter">G</span><span class="hero-letter">P</span><span class="hero-title-star">*</span></span>
           <span class="hero-title-sub">(Pretty Good Policy) for Crypto</span>
           </h1>
-          <p class="mt-6 text-lg text-brand-cloud">An initiative of the Institute for Economic Freedom, convening policymakers, privacy technologists, and advocates to advance balanced cryptocurrency frameworks.</p>
+          <p class="mt-6 text-lg text-brand-cloud">Convening policymakers, privacy technologists, and advocates to advance Pretty Good Policy for Crypto.</p>
           <div class="mt-8 flex flex-col gap-3 sm:flex-row">
             <a href="#mission" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-sm font-semibold uppercase tracking-[0.2em] text-brand-navy transition hover:bg-brand-cloud">Explore the Mission</a>
             <a href="https://community.pgpforcrypto.org" class="inline-flex items-center justify-center rounded-full border border-white/40 px-6 py-3 text-sm font-semibold uppercase tracking-[0.2em] text-white transition hover:border-white hover:bg-white/10">Join the Community</a>
