--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h3 class="text-xl font-semibold text-ink">Privacy Tech in Focus</h3>
             <p class="mt-3 text-muted">Deep dives into zero-knowledge proofs, encrypted finance, and emerging identity tools—and how they strain today’s AML and KYC expectations.</p>
           </div>
-          <div class="card-sheen rounded-3xl border border-brand-cloud/40 p-8 shadow-lg shadow-brand-cloud/30">
+          <div class="card-sheen rounded-3xl border border-brand-cloud/40 p-8 shadow-lg shadow-brand-cloud/30 md:col-span-2 md:max-w-md md:justify-self-center lg:col-span-1 lg:max-w-none">
             <h3 class="text-xl font-semibold text-ink">Policy Roadmaps</h3>
             <p class="mt-3 text-muted">Harnessing the community’s wisdom to craft Pretty Good Policy—recommendations that make compliance workable while building an inclusive, privacy-first financial system.</p>
           </div>
@@ -224,7 +224,7 @@
               <p class="mt-2 text-sm text-brand-cloud">Miles Jennings<br>Head of Policy &amp; General Counsel<br>a16z Crypto</p>
             </div>
           </div>
-          <div class="rounded-3xl border border-white/10 bg-white/5 p-4 shadow-lg shadow-brand-navy/30">
+          <div class="rounded-3xl border border-white/10 bg-white/5 p-4 shadow-lg shadow-brand-navy/30 md:col-span-2 md:max-w-md md:justify-self-center lg:col-span-1 lg:max-w-none">
             <div class="relative w-full overflow-hidden rounded-2xl">
               <div class="aspect-video">
                 <iframe class="h-full w-full" src="https://www.youtube.com/embed/VB2ZBMceAv0" title="Jason Somensatto" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
