--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
   <main id="top">
     <section class="hero-sheen overflow-hidden pt-28 pb-32 text-white">
-      <div class="mx-auto flex max-w-6xl flex-col gap-16 px-6 lg:flex-row lg:items-center">
-        <div class="max-w-xl">
+      <div class="mx-auto flex max-w-6xl flex-col gap-16 px-6 md:items-center lg:flex-row lg:items-center">
+        <div class="max-w-xl md:max-w-2xl md:text-center lg:max-w-xl lg:text-left">
           <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">Monthly Networking &amp; Briefings</p>
           <p class="section-eyebrow text-xs font-semibold uppercase text-brand-cloud/80">for Crypto Policy Leaders</p>
 <h1 class="mt-4 font-extrabold leading-tight">
@@ -135,11 +135,11 @@
           <span class="hero-title-sub">(Pretty Good Policy) for Crypto</span>
           </h1>
           <p class="mt-6 text-lg text-brand-cloud">Over breakfast networking sessions in Washington, D.C., we convene policymakers, privacy technologists, and advocates to advance Pretty Good Policy for Crypto.</p>
-          <div class="mt-8 flex flex-col gap-3 sm:flex-row">
+          <div class="mt-8 flex flex-col gap-3 sm:flex-row md:justify-center lg:justify-start">
             <a href="#mission" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-sm font-semibold uppercase tracking-[0.2em] text-brand-navy transition hover:bg-brand-cloud">Explore the Mission</a>
             <a href="https://community.pgpforcrypto.org" class="inline-flex items-center justify-center rounded-full border border-white/40 px-6 py-3 text-sm font-semibold uppercase tracking-[0.2em] text-white transition hover:border-white hover:bg-white/10">Join the Community</a>
           </div>
-          <div class="mt-10 grid gap-4 sm:grid-cols-2">
+          <div class="mt-10 grid gap-4 sm:grid-cols-2 md:mx-auto md:max-w-2xl lg:mx-0 lg:max-w-none">
             <div class="rounded-2xl border border-white/10 bg-white/10 p-5 backdrop-blur-sm">
               <p class="text-xs font-semibold uppercase tracking-[0.25em] text-brand-cloud">Regular Convenings</p>
               <p class="mt-3 text-base text-brand-cloud">Monthly confidential briefings spotlight privacy-preserving technologies, regulatory shifts, and collaborative strategies for responsible innovation.</p>
@@ -150,7 +150,7 @@
             </div>
           </div>
         </div>
-        <div class="relative mx-auto w-full max-w-sm">
+        <div class="relative mx-auto w-full max-w-sm md:mt-12 lg:mt-0">
           <div class="glow-ring"></div>
           <div class="relative rounded-3xl border border-white/10 bg-white/5 p-8 text-center backdrop-blur">
             <img src="pgp_profile_image.png" alt="PGP* profile" class="mx-auto mb-6 h-36 w-36 rounded-full border border-white/40 object-cover shadow-lg shadow-brand-navy/30"/>
