--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="rounded-3xl border border-white/10 bg-white/5 p-4 shadow-lg shadow-brand-navy/30">
             <div class="relative w-full overflow-hidden rounded-2xl">
               <div class="aspect-video">
-                <iframe class="h-full w-full" src="https://www.youtube.com/embed/_NWf9VSkJRc" title="Josh Swihart" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                <iframe class="h-full w-full" src="https://www.youtube.com/embed/_NWf9VSkJRc" title="Josh Swihart" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
               </div>
             </div>
             <div class="mt-4">
@@ -216,7 +216,7 @@
           <div class="rounded-3xl border border-white/10 bg-white/5 p-4 shadow-lg shadow-brand-navy/30">
             <div class="relative w-full overflow-hidden rounded-2xl">
               <div class="aspect-video">
-                <iframe class="h-full w-full" src="https://www.youtube.com/embed/bAXxDopc2rM" title="Miles Jennings" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                <iframe class="h-full w-full" src="https://www.youtube.com/embed/bAXxDopc2rM" title="Miles Jennings" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
               </div>
             </div>
             <div class="mt-4">
@@ -227,7 +227,7 @@
           <div class="rounded-3xl border border-white/10 bg-white/5 p-4 shadow-lg shadow-brand-navy/30 md:col-span-2 md:max-w-md md:justify-self-center lg:col-span-1 lg:max-w-none">
             <div class="relative w-full overflow-hidden rounded-2xl">
               <div class="aspect-video">
-                <iframe class="h-full w-full" src="https://www.youtube.com/embed/VB2ZBMceAv0" title="Jason Somensatto" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                <iframe class="h-full w-full" src="https://www.youtube.com/embed/VB2ZBMceAv0" title="Jason Somensatto" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
               </div>
             </div>
             <div class="mt-4">
@@ -280,7 +280,7 @@
         <div class="mt-14 grid gap-8 md:grid-cols-2 lg:grid-cols-4">
           <div class="rounded-3xl border border-brand-cloud/60 bg-white p-4 shadow-lg shadow-brand-cloud/40">
             <div class="aspect-video overflow-hidden rounded-2xl">
-              <iframe class="h-full w-full" src="https://youtube.com/embed/cAMgGCCR3Os" title="What decentralization can do for AI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+              <iframe class="h-full w-full" src="https://youtube.com/embed/cAMgGCCR3Os" title="What decentralization can do for AI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
             <div class="mt-4">
               <h3 class="text-lg font-semibold text-ink">What Decentralization Dan Do for AI</h3>
@@ -289,7 +289,7 @@
           </div>
           <div class="rounded-3xl border border-brand-cloud/60 bg-white p-4 shadow-lg shadow-brand-cloud/40">
             <div class="aspect-video overflow-hidden rounded-2xl">
-              <iframe class="h-full w-full" src="https://www.youtube.com/embed/hfhLqnXL3ak" title="Tornado Cash and Samourai Wallet Updates" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+              <iframe class="h-full w-full" src="https://www.youtube.com/embed/hfhLqnXL3ak" title="Tornado Cash and Samourai Wallet Updates" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
             <div class="mt-4">
               <h3 class="text-lg font-semibold text-ink">Tornado Cash and Samourai Wallet Updates</h3>
@@ -298,7 +298,7 @@
           </div>
           <div class="rounded-3xl border border-brand-cloud/60 bg-white p-4 shadow-lg shadow-brand-cloud/40">
             <div class="aspect-video overflow-hidden rounded-2xl">
-              <iframe class="h-full w-full" src="https://www.youtube.com/embed/euqOljuV43c" title="Samczsun on Crypto Security" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+              <iframe class="h-full w-full" src="https://www.youtube.com/embed/euqOljuV43c" title="Samczsun on Crypto Security" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
             <div class="mt-4">
               <h3 class="text-lg font-semibold text-ink">Crypto Security &amp; SEAL's Mission</h3>
@@ -307,7 +307,7 @@
           </div>
           <div class="rounded-3xl border border-brand-cloud/60 bg-white p-4 shadow-lg shadow-brand-cloud/40">
             <div class="aspect-video overflow-hidden rounded-2xl">
-              <iframe class="h-full w-full" src="https://www.youtube.com/embed/9abU3aooAPc" title="Confidential Stablecoins" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+              <iframe class="h-full w-full" src="https://www.youtube.com/embed/9abU3aooAPc" title="Confidential Stablecoins" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
             <div class="mt-4">
               <h3 class="text-lg font-semibold text-ink">Confidential Stablecoins</h3>
