--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
         <span>PGP*</span>
       </a>
       <nav class="hidden items-center space-x-3 text-xs font-semibold uppercase tracking-[0.03em] text-brand-cloud lg:flex">
+        <a href="#registration" class="hover:text-white transition">Register</a>
         <a href="#mission" class="hover:text-white transition">Mission</a>
-        <a href="#focus" class="hover:text-white transition">Focus Areas</a>
+        <a href="#focus" class="hover:text-white transition">Topics</a>
         <a href="#videos" class="hover:text-white transition">Videos</a>
         <a href="#summaries" class="hover:text-white transition">Meetings</a>
         <a href="#project-glitch" class="hover:text-white transition">Deep Dives</a>
@@ -113,8 +114,9 @@
       </button>
     </div>
     <div id="mobile-menu" class="hidden space-y-1 bg-brand-navy/95 px-6 pb-6 pt-3 text-sm font-medium uppercase tracking-[0.12em] text-brand-cloud lg:hidden">
+      <a href="#registration" class="block rounded-lg px-3 py-2 hover:bg-white/10">Register</a>
       <a href="#mission" class="block rounded-lg px-3 py-2 hover:bg-white/10">Mission</a>
-      <a href="#focus" class="block rounded-lg px-3 py-2 hover:bg-white/10">Focus Areas</a>
+      <a href="#focus" class="block rounded-lg px-3 py-2 hover:bg-white/10">Topics</a>
       <a href="#videos" class="block rounded-lg px-3 py-2 hover:bg-white/10">Videos</a>
       <a href="#summaries" class="block rounded-lg px-3 py-2 hover:bg-white/10">Meetings</a>
       <a href="#project-glitch" class="block rounded-lg px-3 py-2 hover:bg-white/10">Deep Dives</a>
@@ -156,6 +158,21 @@
             <img src="pgp_profile_image.png" alt="PGP* profile" class="mx-auto mb-6 h-36 w-36 rounded-full border border-white/40 object-cover shadow-lg shadow-brand-navy/30"/>
             <p class="text-sm uppercase tracking-[0.35em] text-brand-cloud/70">Policy. Privacy. Progress.</p>
             <p class="mt-4 text-lg text-brand-cloud">Pretty Good Policy for Crypto fosters practical collaboration that respects privacy, security, and innovation.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="registration" class="bg-white py-16">
+      <div class="mx-auto flex max-w-5xl flex-col gap-10 px-6 md:items-center">
+        <div class="text-center md:max-w-3xl">
+          <p class="section-eyebrow text-xs font-semibold uppercase text-brand-lavender">Register</p>
+          <h2 class="mt-4 text-3xl font-bold text-ink md:text-4xl">Upcoming PGP* Gatherings</h2>
+          <p class="mt-4 text-lg text-muted">Reserve your seat for the next breakfast briefing and stay current on our Washington, D.C. series.</p>
+        </div>
+        <div class="w-full">
+          <div class="rounded-3xl border border-brand-cloud/60 bg-brand-ice/80 p-3 shadow-lg shadow-brand-cloud/30">
+            <iframe src="https://luma.com/embed/calendar/cal-vN9E5jdUqnLSVQ5/events?lt=light" title="PGP* registration events" class="h-[540px] w-full rounded-[1.25rem] bg-white/95" frameborder="0" allowfullscreen aria-hidden="false" tabindex="0" style="border: 1px solid rgba(193, 197, 226, 0.6); border-radius: 22px; box-shadow: 0 18px 38px -24px rgba(11, 11, 67, 0.42);"></iframe>
           </div>
         </div>
       </div>
