--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="mt-10 grid gap-4 sm:grid-cols-2 md:mx-auto md:max-w-2xl lg:mx-0 lg:max-w-none">
             <div class="rounded-2xl border border-white/10 bg-white/10 p-5 backdrop-blur-sm">
               <p class="text-xs font-semibold uppercase tracking-[0.25em] text-brand-cloud">Regular Convenings</p>
-              <p class="mt-3 text-base text-brand-cloud">Monthly confidential briefings spotlight privacy-preserving technologies, regulatory shifts, and collaborative strategies for responsible innovation.</p>
+              <p class="mt-3 text-base text-brand-cloud">Monthly briefings spotlight privacy-preserving technologies, regulatory shifts, and collaborative strategies for responsible innovation.</p>
             </div>
             <div class="rounded-2xl border border-white/10 bg-white/10 p-5 backdrop-blur-sm">
               <p class="text-xs font-semibold uppercase tracking-[0.25em] text-brand-cloud">In Washington, D.C.</p>
