added beta to community link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <a href="#project-glitch" class="hover:text-white transition">Deep Dives</a>
         <a href="#venue" class="hover:text-white transition">Venue</a>
         <a href="#contact" class="hover:text-white transition">Contact</a>
-        <a href="https://community.pgpforcrypto.org" class="rounded-full bg-white/10 px-3 py-1 font-semibold text-white transition hover:bg-white/20">Member Community</a>
+        <a href="https://community.pgpforcrypto.org" class="rounded-full bg-white/10 px-3 py-1 font-semibold text-white transition hover:bg-white/20">Member Community (BETA)</a>
       </nav>
       <button id="mobile-menu-button" class="text-white lg:hidden" aria-label="Toggle navigation">
         <svg class="h-7 w-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -122,7 +122,7 @@
       <a href="#project-glitch" class="block rounded-lg px-3 py-2 hover:bg-white/10">Deep Dives</a>
       <a href="#venue" class="block rounded-lg px-3 py-2 hover:bg-white/10">Venue</a>
       <a href="#contact" class="block rounded-lg px-3 py-2 hover:bg-white/10">Contact</a>
-      <a href="https://community.pgpforcrypto.org" class="mt-2 block rounded-full bg-white/10 px-3 py-2 text-center font-semibold text-white hover:bg-white/20">Member Community</a>
+      <a href="https://community.pgpforcrypto.org" class="mt-2 block rounded-full bg-white/10 px-3 py-2 text-center font-semibold text-white hover:bg-white/20">Member Community (BETA)</a>
     </div>
   </header>
 
