added bullets for lists in the stablecoin report

--- a/reports/evaluating-compliance-by-design-stablecoin-architecture.html
+++ b/reports/evaluating-compliance-by-design-stablecoin-architecture.html
@@ -369,7 +369,7 @@
               <h3 class="mt-2 text-xl font-semibold text-ink">Scalability and Performance</h3>
               <p class="mt-4 text-muted">Zcash has made steady progress improving shielded performance, most notably through the transition to Halo 2, which removed the need for a trusted setup and reduced proof sizes and verification overhead. These upgrades let the shielded pool operate more efficiently as usage grows.</p>
               <p class="mt-4 text-muted">A major forward-looking improvement is Project Tachyon, an Electric Coin Company initiative to redesign Zcash network architecture for higher throughput, better fee economics, and modernized consensus operations. Tachyon proposes a modular, performance-oriented architecture that can:</p>
-              <ul class="mt-4 space-y-3 text-muted">
+              <ul class="mt-4 space-y-3 text-muted list-disc list-outside pl-5">
                 <li><span class="font-semibold text-ink">Increase transaction throughput</span> by redesigning validation and mempool pathways.</li>
                 <li><span class="font-semibold text-ink">Improve fee efficiency</span> by reducing competition for block space and enabling more predictable economics.</li>
                 <li><span class="font-semibold text-ink">Support future enhancements</span> such as light-client scalability, improved wallet performance, and expanded shielded functionality.</li>
@@ -377,7 +377,7 @@
               </ul>
               <p class="mt-4 text-muted">Tachyon keeps the base layer lightweight, private, and high-performance while enabling richer functionality through layered systems. This avoids the DOV requirement to embed compliance logic in consensus, keeping scalability improvements independent of regulatory complexity.</p>
               <p class="mt-4 text-muted">As Tachyon and related improvements roll out, Zcash is positioned to support:</p>
-              <ul class="mt-4 space-y-3 text-muted">
+              <ul class="mt-4 space-y-3 text-muted list-disc list-outside pl-5">
                 <li>Higher-volume retail and commercial payments</li>
                 <li>Large-scale shielded stablecoin settlement</li>
                 <li>Selective-disclosure business workflows, especially when combined with JHP-style credentials</li>
