updated logo on report page

--- a/reports/evaluating-compliance-by-design-stablecoin-architecture.html
+++ b/reports/evaluating-compliance-by-design-stablecoin-architecture.html
@@ -104,7 +104,7 @@
   <header class="sticky top-0 z-20 border-b border-white/60 bg-white/80 backdrop-blur">
     <div class="mx-auto flex max-w-6xl items-center justify-between px-6 py-4">
       <div class="flex items-center gap-3">
-        <div class="flex h-10 w-10 items-center justify-center rounded-full bg-brand-navy text-lg font-bold text-white shadow-lg shadow-brand-navy/30">PGP*</div>
+        <div class="flex h-10 w-10 items-center justify-center rounded-full bg-brand-navy text-sm font-extrabold leading-tight text-white shadow-lg shadow-brand-navy/30">PGP*</div>
         <div>
           <p class="text-xs font-semibold uppercase tracking-[0.24em] text-brand-lavender">Report</p>
           <p class="text-sm font-semibold text-ink">PGP* for Crypto</p>
