--- a/reports/evaluating-compliance-by-design-stablecoin-architecture.html
+++ b/reports/evaluating-compliance-by-design-stablecoin-architecture.html
@@ -303,20 +303,12 @@
           <div id="jhp-addresses-concerns" class="rounded-2xl border border-brand-cloud/60 bg-brand-ice/70 p-6">
             <p class="text-xs font-semibold uppercase tracking-[0.2em] text-brand-lavender">4.2</p>
             <h3 class="mt-2 text-xl font-semibold text-ink">How JHP Addresses Core Concerns</h3>
-            <div class="mt-4 grid gap-4">
-              <div class="rounded-xl border border-brand-cloud/60 bg-white p-4">
-                <p class="text-sm font-semibold text-ink">Honeypots and Data Centralization</p>
-                <p class="mt-2 text-sm text-muted">Credentials are user-held and portable, minimizing central databases. ZK proofs and selective disclosure lower the value of any single breach.</p>
-              </div>
-              <div class="rounded-xl border border-brand-cloud/60 bg-white p-4">
-                <p class="text-sm font-semibold text-ink">Global Compatibility</p>
-                <p class="mt-2 text-sm text-muted">Standards are payment-rail agnostic, letting jurisdictions apply their own screening without forcing a global blacklist into consensus logic.</p>
-              </div>
-              <div class="rounded-xl border border-brand-cloud/60 bg-white p-4">
-                <p class="text-sm font-semibold text-ink">Authoritarian Misuse</p>
-                <p class="mt-2 text-sm text-muted">Decentralized, user-controlled attestations remove the central switch that would allow system-wide exclusion of dissidents.</p>
-              </div>
-            </div>
+            <p class="mt-4 text-muted">The JHP approach offers structural solutions to the risks inherent in the DOV model:</p>
+            <ul class="mt-4 space-y-3 text-muted">
+              <li><span class="font-semibold text-ink">Honeypots and Data Centralization:</span> Credentials are user-held and portable, minimizing central databases. ZK proofs and selective disclosure lower the value of any single breach.</li>
+              <li><span class="font-semibold text-ink">Global Compatibility:</span> Standards are payment-rail agnostic, letting jurisdictions apply their own screening without forcing a global blacklist into consensus logic.</li>
+              <li><span class="font-semibold text-ink">Authoritarian Misuse:</span> Decentralized, user-controlled attestations remove the central switch that would allow system-wide exclusion of dissidents.</li>
+            </ul>
           </div>
         </div>
       </div>
